--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -5,13 +5,13 @@
 		<h2>Add Stuff</h2>
 		<form method="POST" enctype="multipart/form-data" action="/upload">
 			<label for="product_name">Name:</label>
-			<input type="text" id="product_name" name="product_name" required />
+			<input type="text" id="product_name" name="name" required />
 
 			<label for="product_price">Price:</label>
 			<input
 				type="number"
 				id="product_price"
-				name="product_price"
+				name="price"
 				required
 			/>
 
