--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,44 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h1> main page</h1>
+<blockquote class="blockquote">
+	<p class="blockquote__text">
+	  Elevate your workout style with our curated gym t-shirt collection.
+	</p>
+  </blockquote>
+  <section class="t__shirt">
+	<div class="container">
+	  <div class="t__shirt-inner">
+		<ul class="t__shirt-list">
+			{% for article in articles %}
+  <li class="t__shirt-item">
+    <img src="{{ url_for('uploaded_file', filename=article.image + '.png') }}" class="t__shirt-img" />
+    <h5 class="t__shirt-text">{{ article.name }}</h5>
+    <h6 class="t__shirt-text">{{ article.price }}</h6>
+  </li>
+{% endfor %}
+		</ul>
+	  </div>
+	</div>
+  </section>
+  <footer class="footer">
+	<div class="container">
+	  <div class="footer__inner">
+		<ul class="footer__list">
+		  <li class="footer__list-item">
+			<a href="#" class="footer__list-link">Privacy Policy</a>
+		  </li>
+		  <li class="footer__list-item">
+			<a href="#" class="footer__list-link">Refund Policy</a>
+		  </li>
+		  <li class="footer__list-item">
+			<a href="#" class="footer__list-link">Terms of Service</a>
+		  </li>
+		  <li class="footer__list-item">
+			<a href="#" class="footer__list-link">Copyrights</a>
+		  </li>
+		</ul>
+	  </div>
+	</div>
+  </footer>
 {% endblock %}
