--- a/templates/index.html
+++ b/templates/index.html
@@ -10,35 +10,41 @@
 	<div class="container">
 	  <div class="t__shirt-inner">
 		<ul class="t__shirt-list">
-			{% for article in articles %}
+	{% for article in articles %}
+	<a href="/article/{{article.image}}">
   <li class="t__shirt-item">
     <img src="{{ url_for('uploaded_file', filename=article.image + '.png') }}" class="t__shirt-img" />
     <h5 class="t__shirt-text">{{ article.name }}</h5>
     <h6 class="t__shirt-text">{{ article.price }}</h6>
   </li>
+</a>
 {% endfor %}
 		</ul>
 	  </div>
 	</div>
+	<section class="release__section">
+		<div class="container">
+		  <div class="realese__inner">
+			<h3 class="realese__head">
+			  DONT MISS A RELEASE! JOIN OUR MAILING LIST!
+			</h3>
+			<div class="realese__form-container">
+			  <form class="email__form">
+				<input
+				  type="email"
+				  id="email"
+				  name="email"
+				  class="email__input"
+				  placeholder="Enter your email"
+				  required
+				/>
+				<button type="submit" class="submit__button">
+				  <span class="arrow">&#10148;</span>
+				</button>
+			  </form>
+			</div>
+		  </div>
+		</div>
+	  </section>
   </section>
-  <footer class="footer">
-	<div class="container">
-	  <div class="footer__inner">
-		<ul class="footer__list">
-		  <li class="footer__list-item">
-			<a href="#" class="footer__list-link">Privacy Policy</a>
-		  </li>
-		  <li class="footer__list-item">
-			<a href="#" class="footer__list-link">Refund Policy</a>
-		  </li>
-		  <li class="footer__list-item">
-			<a href="#" class="footer__list-link">Terms of Service</a>
-		  </li>
-		  <li class="footer__list-item">
-			<a href="#" class="footer__list-link">Copyrights</a>
-		  </li>
-		</ul>
-	  </div>
-	</div>
-  </footer>
 {% endblock %}
